# PhotoWizard-MacApp

./: .gitignore
CppCore/: CMakeLists.txt
CppCore/core/: core.cpp  core.hpp  main.cpp
PhotoWizard/: AppDelegate.swift  ContentView.swift  PhotoWizardApp.swift  ViewController.swift
PhotoWizard.xcodeproj/: project.pbxproj
PhotoWizard.xcodeproj/project.xcworkspace/xcuserdata/arsenydunaev.xcuserdatad/: UserInterfaceState.xcuserstate
PhotoWizard.xcodeproj/xcuserdata/arsenydunaev.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
PhotoWizard/CppCore/: CMakeLists.txt  CppCore.cpp  CppCore.hpp  module.modulemap
PhotoWizard/CppCore/core/: core.cpp  core.hpp  main.cpp
PhotoWizard/Model/: Model.swift  PhotoEditor.swift
PhotoWizard/ViewModel/: ViewModel.swift
PhotoWizard/Views/: ContentView.swift  ImageEditorView.swift
